Fixing interaction wrapping in Mobile view

--- a/src/styles/timeline.sass
+++ b/src/styles/timeline.sass
@@ -1,3 +1,3 @@
 .timeline .timeline-content
   flex-grow: 1
-  max-width: 750px
+  max-width: calc(100%)
